@@ -1,5 +1,14 @@
 2010-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* libtiff/tif_fax3.c (Fax3SetupState): Yesterday's fix for
+	CVE-2010-1411 was not complete.
+
+	* libtiff/tiffiop.h (TIFFSafeMultiply): New macro to safely
+	multiply two integers.  Returns zero if there is an integer
+	overflow.
+
+	* tools/tiffcp.c (main): Fix more TIFF handle leaks.
+
 	* libtiff/tif_read.c (TIFFReadBufferSetup): Skip allocating
 	tif_rawdata if tif_rawdatasize becomes zero.
 
